--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       HOST: 0.0.0.0
       PORT: 4001
       RMQ_URL: amqp://rabbitmq:5672
+      INSTANCE: palyer1
     depends_on:
       - rabbitmq
 
@@ -64,6 +65,7 @@ services:
       HOST: 0.0.0.0
       PORT: 4002
       RMQ_URL: amqp://rabbitmq:5672
+      INSTANCE: palyer2
     depends_on:
       - rabbitmq
 
@@ -81,5 +83,6 @@ services:
       HOST: 0.0.0.0
       PORT: 4003
       RMQ_URL: amqp://rabbitmq:5672
+      INSTANCE: palyer3
     depends_on:
       - rabbitmq
