--- a/services/api/.eslintrc
+++ b/services/api/.eslintrc
@@ -1,10 +1,10 @@
 {
-  "root": true,
-  "parserOptions": {
-    "project": "./tsconfig.test.json"
-  },
   "extends": [
     "@trejgun/eslint-config/presets/ts",
     "@trejgun/eslint-config/rules/jest"
-  ]
+  ],
+  "parserOptions": {
+    "project": "./tsconfig.test.json"
+  },
+  "root": true
 }
