--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,7 +12,7 @@
     "@nestjs/microservices": "8.0.6",
     "@nestjs/platform-express": "8.0.6",
     "@nestjs/swagger": "5.0.9",
-    "@nestjs/terminus": "7.2.0",
+    "@nestjs/terminus": "8.0.0-next.0",
     "amqp-connection-manager": "3.4.4",
     "amqplib": "0.8.0",
     "dotenv": "10.0.0",
