--- a/services/player/package.json
+++ b/services/player/package.json
@@ -11,7 +11,7 @@
     "@nestjs/core": "8.0.6",
     "@nestjs/microservices": "8.0.6",
     "@nestjs/platform-express": "8.0.6",
-    "@nestjs/terminus": "7.2.0",
+    "@nestjs/terminus": "8.0.0-next.0",
     "amqplib": "0.8.0",
     "amqp-connection-manager": "3.4.4",
     "dotenv": "10.0.0",
