--- a/services/player/package.json
+++ b/services/player/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/TrejGun/hot-potato-using-nestjs-microservices"
   },
   "dependencies": {
+    "@nestjs/axios": "0.0.1",
     "@nestjs/common": "8.0.6",
     "@nestjs/core": "8.0.6",
     "@nestjs/microservices": "8.0.6",
