--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist",
     "build": "lerna run build --stream",
+    "clean": "sh scripts/clean.sh",
     "lint": "lerna run lint --stream --parallel",
     "precommit": "lint-staged",
     "prettier": "prettier \"services/**/*.{ts,tsx}\" --write",
