--- a/services/api/package.json
+++ b/services/api/package.json
@@ -14,9 +14,9 @@
     "@nestjs/platform-express": "8.2.4",
     "@nestjs/swagger": "5.1.5",
     "@nestjs/terminus": "8.0.3",
-    "amqp-connection-manager": "3.9.0",
+    "amqp-connection-manager": "4.0.0",
     "amqplib": "0.8.0",
-    "dotenv": "10.0.0",
+    "dotenv": "11.0.0",
     "express": "4.17.2",
     "reflect-metadata": "0.1.13",
     "swagger-ui-express": "4.3.0"
@@ -26,7 +26,7 @@
     "@trejgun/eslint-config": "0.1.7",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
-    "@types/node": "14.18.5",
+    "@types/node": "16.11.19",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "eslint": "7.32.0",
@@ -52,13 +52,13 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . --fix --ext .ts,.tsx",
+    "lint": "eslint . --fix",
     "prebuild": "rm -rf dist/",
     "prepublish": "npm run build",
     "start": "NODE_ENV=development tsc-watch --onSuccess \"node .\" --onFailure \"echo Compilation Failed\"",
     "start:prod": "NODE_ENV=${NODE_ENV:=production} node .",
     "test": "NODE_ENV=${NODE_ENV:=test} jest --config jest.config.json"
   },
-  "title": "Encoder Admin API",
+  "title": "Hot Potato API",
   "version": "0.0.1"
 }
