--- a/services/player/package.json
+++ b/services/player/package.json
@@ -14,8 +14,8 @@
     "@nestjs/platform-express": "8.2.4",
     "@nestjs/terminus": "8.0.3",
     "amqplib": "0.8.0",
-    "amqp-connection-manager": "3.9.0",
-    "dotenv": "10.0.0",
+    "amqp-connection-manager": "4.0.0",
+    "dotenv": "11.0.0",
     "express": "4.17.2",
     "reflect-metadata": "0.1.13",
     "typescript": "4.5.4"
@@ -25,7 +25,7 @@
     "@nestjs/testing": "8.2.4",
     "@trejgun/eslint-config": "0.1.7",
     "@types/express": "4.17.13",
-    "@types/node": "14.18.5",
+    "@types/node": "16.11.19",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "eslint": "7.32.0",
@@ -43,7 +43,7 @@
     "tsc-watch": "4.6.0"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=14"
   },
   "license": "UNLICENSED",
   "main": "./dist/index.js",
@@ -55,13 +55,13 @@
   },
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . --fix --ext .ts,.tsx",
+    "lint": "eslint . --fix",
     "prebuild": "rm -rf dist/",
     "prepublish": "npm run build",
     "start": "NODE_ENV=development tsc-watch --onSuccess \"node .\" --onFailure \"echo Compilation Failed\"",
     "start:prod": "NODE_ENV=${NODE_ENV:=production} node .",
-    "test": "exit 0"
+    "test": "NODE_ENV=${NODE_ENV:=test} jest --config jest.config.json"
   },
-  "title": "UI",
+  "title": "Hot Potato Player",
   "version": "0.0.1"
 }
