--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,17 +5,18 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
+    "lib": ["ES2020.Promise"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "outDir": "./dist",
     "resolveJsonModule": true,
-    "rootDirs": ["./src", "./server", "./client"],
+    "rootDir": "./src",
     "skipLibCheck": true,
     "sourceMap": true,
     "strictBindCallApply": true,
@@ -24,5 +25,5 @@
     "strictPropertyInitialization": false,
     "target": "es2017"
   },
-  "exclude": ["node_module", "./dist", "./test"]
+  "exclude": ["node_modules", "./dist"]
 }
