--- a/services/player/package.json
+++ b/services/player/package.json
@@ -23,23 +23,22 @@
   "description": "microservice",
   "devDependencies": {
     "@nestjs/testing": "8.2.6",
-    "@trejgun/eslint-config": "0.1.7",
+    "@gemunion/eslint-config": "1.0.1",
     "@types/express": "4.17.13",
     "@types/node": "16.11.22",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "16.0.3",
-    "eslint-import-resolver-ts": "0.4.2",
+    "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jest": "24.7.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-promise": "5.2.0",
+    "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
-    "eslint-plugin-standard": "4.1.0",
     "tsc-watch": "4.6.0"
   },
   "engines": {
