test: update eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,10 @@
 {
-  "root": true,
+  "extends": [
+    "@gemunion/eslint-config/presets/ts",
+    "@gemunion/eslint-config/tests/jest"
+  ],
   "parserOptions": {
     "project": "./tsconfig.test.json"
   },
-  "extends": [
-    "@gemunion/eslint-config/presets/ts",
-    "@gemunion/eslint-config/rules/jest"
-  ]
+  "root": true
 }
