--- a/services/api/package.json
+++ b/services/api/package.json
@@ -23,19 +23,19 @@
   },
   "devDependencies": {
     "@nestjs/testing": "8.4.4",
-    "@gemunion/eslint-config": "1.0.5",
+    "@gemunion/eslint-config": "2.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "16.11.33",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
-    "eslint": "7.32.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-config-standard": "16.0.3",
+    "eslint-config-standard": "17.0.0",
     "eslint-import-resolver-typescript": "2.7.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "26.1.5",
-    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-n": "15.2.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.29.4",
