--- a/services/player/package.json
+++ b/services/player/package.json
@@ -13,8 +13,8 @@
     "@nestjs/microservices": "8.4.4",
     "@nestjs/platform-express": "8.4.4",
     "@nestjs/terminus": "8.0.6",
-    "amqplib": "0.8.0",
     "amqp-connection-manager": "4.1.3",
+    "amqplib": "0.8.0",
     "dotenv": "16.0.0",
     "express": "4.18.1",
     "reflect-metadata": "0.1.13",
@@ -22,9 +22,10 @@
   },
   "description": "microservice",
   "devDependencies": {
-    "@nestjs/testing": "8.4.4",
     "@gemunion/eslint-config": "2.0.1",
+    "@nestjs/testing": "8.4.4",
     "@types/express": "4.17.13",
+    "@types/jest": "27.5.0",
     "@types/node": "16.11.33",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
@@ -39,7 +40,10 @@
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
-    "tsc-watch": "4.6.2"
+    "jest": "28.1.0",
+    "ts-jest": "28.0.1",
+    "tsc-watch": "4.6.2",
+    "typescript": "4.6.4"
   },
   "engines": {
     "node": ">=14"
