--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "name": "TrejGun"
   },
   "dependencies": {
+    "@lerna/legacy-package-management": "7.1.3",
     "lerna": "7.1.3"
   },
   "devDependencies": {
@@ -12,7 +13,7 @@
     "prettier": "3.0.0"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "license": "MIT",
   "name": "hot-potato-using-nestjs-microservices",
