--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lerna": "8.1.9"
   },
   "devDependencies": {
-    "husky": "4.3.8",
+    "husky": "9.1.6",
     "lint-staged": "15.2.10",
     "prettier": "3.3.3"
   },
@@ -29,7 +29,8 @@
     "precommit": "lint-staged",
     "prettier": "prettier \"services/**/*.{ts,tsx}\" --write",
     "start": "lerna exec --parallel --scope @hot-potato-using-nestjs-microservices/api --scope @hot-potato-using-nestjs-microservices/player -- npm start",
-    "test": "lerna exec --parallel -- npm run test"
+    "test": "lerna exec --parallel -- npm run test",
+    "prepare": "husky"
   },
   "version": "0.0.1"
 }
