--- a/services/api/package.json
+++ b/services/api/package.json
@@ -21,24 +21,11 @@
     "reflect-metadata": "0.2.2"
   },
   "devDependencies": {
+    "@ethberry/eslint-config": "5.0.4",
     "@nestjs/testing": "10.4.6",
-    "@gemunion/eslint-config": "4.0.6",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.14",
     "@types/node": "20.17.5",
-    "@typescript-eslint/eslint-plugin": "8.12.2",
-    "@typescript-eslint/parser": "8.12.2",
-    "eslint": "8.57.1",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-config-standard": "17.1.0",
-    "eslint-import-resolver-typescript": "3.6.3",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jest": "27.9.0",
-    "eslint-plugin-n": "16.6.2",
-    "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-promise": "6.6.0",
-    "eslint-plugin-react": "7.37.2",
-    "eslint-plugin-react-hooks": "4.6.2",
     "jest": "29.7.0",
     "ts-jest": "29.2.5",
     "tsc-watch": "6.2.0",
