--- a/services/api/tsconfig.json
+++ b/services/api/tsconfig.json
@@ -5,8 +5,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "jsx": "react-jsx",
-    "lib": ["ES2020.Promise"],
+    "lib": ["ES2021"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -15,6 +14,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "outDir": "./dist",
+    "removeComments": true,
     "resolveJsonModule": true,
     "rootDir": "./src",
     "skipLibCheck": true,
@@ -25,5 +25,5 @@
     "strictPropertyInitialization": false,
     "target": "es2017"
   },
-  "exclude": ["node_modules", "./dist"]
+  "exclude": ["node_modules", "dist"]
 }
