chore: rework using best practices

--- a/services/api/.env.development
+++ b/services/api/.env.development
@@ -3,4 +3,7 @@ HOST=127.0.0.1
 PORT=3001
 
 # RMQ
-RMQ_URL=amqp://127.0.0.1:5672
+RMQ_URL=amqp://admin:password@localhost:5672
+RMQ_QUEUE=potato
+
+INSTANCE=api
