--- a/services/player/package.json
+++ b/services/player/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/TrejGun/hot-potato-using-nestjs-microservices"
   },
   "dependencies": {
-    "@nestjs/axios": "4.0.0",
     "@nestjs/common": "11.0.5",
+    "@nestjs/config": "4.0.0",
     "@nestjs/core": "11.0.5",
     "@nestjs/microservices": "11.0.5",
     "@nestjs/platform-express": "11.0.5",
@@ -16,14 +16,12 @@
     "amqp-connection-manager": "4.1.14",
     "amqplib": "0.10.5",
     "dotenv": "16.4.7",
-    "express": "4.21.2",
     "reflect-metadata": "0.2.2",
     "typescript": "5.7.3"
   },
   "description": "microservice",
   "devDependencies": {
     "@nestjs/testing": "11.0.5",
-    "@types/express": "4.17.21",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.8",
     "jest": "29.7.0",
@@ -32,7 +30,7 @@
     "typescript": "5.7.3"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=20"
   },
   "license": "UNLICENSED",
   "main": "./dist/index.js",
