--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       NODE_ENV: "development"
       HOST: 0.0.0.0
       PORT: 3001
-      RMQ_URL: amqp://rabbitmq:5672
+      RMQ_URL: amqp://admin:password@localhost:5672
       RMQ_QUEUE: potato
     depends_on:
       - rabbitmq
@@ -47,7 +47,7 @@ services:
       NODE_ENV: "development"
       HOST: 0.0.0.0
       PORT: 4001
-      RMQ_URL: amqp://rabbitmq:5672
+      RMQ_URL: amqp://admin:password@localhost:5672
       RMQ_QUEUE: potato
       INSTANCE: palyer1
     depends_on:
@@ -66,7 +66,7 @@ services:
       NODE_ENV: "development"
       HOST: 0.0.0.0
       PORT: 4002
-      RMQ_URL: amqp://rabbitmq:5672
+      RMQ_URL: amqp://admin:password@localhost:5672
       RMQ_QUEUE: potato
       INSTANCE: palyer2
     depends_on:
@@ -85,7 +85,7 @@ services:
       NODE_ENV: "development"
       HOST: 0.0.0.0
       PORT: 4003
-      RMQ_URL: amqp://rabbitmq:5672
+      RMQ_URL: amqp://admin:password@localhost:5672
       RMQ_QUEUE: potato
       INSTANCE: palyer3
     depends_on:
